Fix marketing site dark mode colors

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -1,14 +1,44 @@
-.ftk-version {
-  background-color: #6f4bb2;
-  color: #fff;
-  position: absolute;
-  top: -0.125em;
-  margin-left: 0.75em;
-  padding: 0.25em 0.5em;
-  border-radius: 0.5em;
-  font-size: 0.7em;
-  font-weight: 500;
-  display: inline-block;
+// Colors: https://coolors.co/6f4bb2
+
+.ftk-new,
+.ftk-pricing {
+  margin: 0;
+  padding: 1rem;
+
+  h3 {
+    margin: 0 0 1rem;
+  }
+  p {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+  }
+}
+
+.ftk-new {
+  background-color: #6f4bb233;
+  border: solid 1px #6f4bb2;
+
+  .dark-mode & a {
+    color: #c2b2df;
+  }
+
+  h3 .ftk-version {
+    background-color: #6f4bb2;
+    color: #fff;
+    position: absolute;
+    top: -0.125em;
+    margin-left: 0.75em;
+    padding: 0.25em 0.5em;
+    border-radius: 0.5em;
+    font-size: 0.7em;
+    font-weight: 500;
+    display: inline-block;
+  }
+}
+
+.ftk-pricing {
+  background-color: #8fb44b33;
+  border: solid 1px #8fb44b;
 }
 
 a[target='_blank']:hover::after {
@@ -70,7 +100,7 @@ a[target='_blank']:hover::after {
 .ftk-instructions {
   .ftk-step {
     .ftk-accordion {
-      background-color: #eef;
+      background-color: #6f4bb233;
       cursor: pointer;
       border: none;
       outline: none;
@@ -79,25 +109,29 @@ a[target='_blank']:hover::after {
       transition: 0.4s;
       width: 100%;
 
+      .dark-mode & {
+        color: #e0d8ef;
+      }
       &:after {
         content: '\02795'; /* Unicode plus (+) */
-        font-size: 0.8125rem;
         color: #777;
+        font-size: 0.8125rem;
         float: right;
         margin-left: 5px;
       }
+      .ftk-accordion:hover {
+        background-color: #6f4bb266;
+      }
     }
     &.ftk-active .ftk-accordion {
-      background-color: #ddf;
-    }
-    .ftk-accordion:hover {
-      background-color: #ccf;
-    }
-    &.ftk-active .ftk-accordion:after {
-      content: '\2796'; /* Unicode minus (-) */
+      background-color: #6f4bb299;
+
+      &:after {
+        content: '\2796'; /* Unicode minus (-) */
+      }
     }
     & > div {
-      background-color: #f9f9ff;
+      background-color: #6f4bb211;
       display: none;
       margin-bottom: 1.5rem 1.5rem;
       overflow: hidden;
